[package]
name = "tfb_common"
version = "0.1.2"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "time", "local-time"] }
tracing-appender = "0.2"
chrono = "0.4"
time = "0.3"
regex = "1.5"
zip = "0.6"
zstd = { version = "0.11.2", optional = true }
sha2 = "0.10"
data-encoding = "2.5.0"
toml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
